fix: vulnerabilidades criticas de seguridad - JWT, CORS, headers HTTP y config